--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
     "next": "12.0.7",
     "next-auth": "^3.27.3",
     "react": "17.0.2",
