--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme": "^3.11.0",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "jest-fetch-mock": "^3.0.3"
   }
 }
